# srm-credit-engine

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250101_0001_initial_schema.py  20250101_0002_seed_catalog.py
backend/docker/: entrypoint.sh
backend/src/srm_credit_engine/: __init__.py  config.py  main.py
backend/src/srm_credit_engine/api/: __init__.py
backend/src/srm_credit_engine/api/v1/: __init__.py  deps.py  errors.py
backend/src/srm_credit_engine/api/v1/routers/: __init__.py  assignors.py  exchange_rates.py  pricing.py  product_types.py  receivables.py  reports.py  settlements.py
backend/src/srm_credit_engine/api/v1/schemas/: __init__.py  assignor.py  common.py  exchange_rate.py  pricing.py  product_type.py  receivable.py  reports.py  settlement.py
backend/src/srm_credit_engine/domain/: __init__.py  exceptions.py
backend/src/srm_credit_engine/domain/analytics/: __init__.py  dtos.py  queries.py
backend/src/srm_credit_engine/domain/entities/: __init__.py  assignor.py  currency.py  exchange_rate.py  product_type.py  receivable.py  settlement.py
backend/src/srm_credit_engine/domain/ports/: __init__.py  analytics.py  currency_converter.py  repositories.py
backend/src/srm_credit_engine/domain/pricing/: __init__.py  resolver.py  strategies.py  strategy.py
backend/src/srm_credit_engine/domain/services/: __init__.py  pricing_service.py
backend/src/srm_credit_engine/domain/value_objects/: __init__.py  money.py
backend/src/srm_credit_engine/infrastructure/: __init__.py  analytics_repository.py  database.py  database_currency_converter.py  fallback_currency_converter.py  live_rate_converter.py  mappers.py  models.py  repositories.py
backend/src/srm_credit_engine/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
backend/src/srm_credit_engine/resilience/: __init__.py  circuit_breaker.py  resilient_converter.py  retries.py
backend/tests/integration/: conftest.py  test_assignors.py  test_exchange_rates.py  test_health.py  test_observability.py  test_pricing_and_settlement.py  test_product_types.py  test_receivables.py  test_reports.py
backend/tests/unit/: conftest.py  test_database_currency_converter.py  test_entities.py  test_entity_invariants.py  test_money.py  test_money_properties.py  test_observability.py  test_pricing_properties.py  test_pricing_service.py  test_pricing_strategies.py  test_repositories.py  test_resilience.py
db/migrations/: V1__init.sql
docs/: COMMITS.md  ER.md  HOTFIX_PROTOCOL.md  PLAN.md  acceptance-criteria.md
docs/adr/: ADR-001-branching-strategy.md  ADR-002-hexagonal-architecture.md  ADR-003-decimal-money.md  ADR-004-resilience-layering.md  ADR-005-observability-stack.md  ADR-006-multi-tenancy.md  README.md
docs/architecture/: README.md  c4-components.md  c4-containers.md  c4-context.md  eda.md  high-scale.md
docs/pull-requests/: PR-001-bootstrap.md  PR-002-data-model.md  PR-003-backend-bootstrap.md  PR-004-lint-and-lockfile.md  (+25 more)
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: receivables_sample.csv  seed_receivables.py
(+35 files in other folders)
