[project]
name = "srm-credit-engine"
version = "1.0.0"
description = "SRM Credit Engine — Plataforma de cessão de crédito multimoedas (FIDC)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SRM Dev" }]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Schemas / Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-client>=0.21.0",
    # Resilience
    "tenacity>=9.0.0",
    "purgatory>=3.0.0",
    # Utilities
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.115.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srm_credit_engine"]

# ---------------------- Ruff ----------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "C4",         # comprehensions
    "UP",         # pyupgrade
    "SIM",        # simplify
    "S",          # bandit (security)
    "N",          # pep8-naming
    "PL",         # pylint
    "RUF",        # ruff-specific
    "ASYNC",      # async checks
    "ANN",        # missing type annotations
    "TCH",        # type-checking imports
    "PIE",
    "RET",
    "ARG",        # unused arguments
]
ignore = [
    "S101",       # use of assert (ok in tests)
    "PLR0913",    # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004", "ARG"]
"alembic/**" = ["ANN", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["srm_credit_engine"]

# ---------------------- Mypy ----------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["purgatory.*"]
ignore_missing_imports = true

# ---------------------- Pytest ----------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=srm_credit_engine",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires running database",
    "slow: long running tests",
]

[tool.coverage.run]
branch = true
source = ["src/srm_credit_engine"]
omit = ["*/migrations/*", "*/alembic/*"]
